test/src/e2e_vm_tests/test_programs/should_fail/recover_at_level_top/src/main.sw
script;

random_words

f9


fn good1() {

}

fn a

const ASSET_1: b256 = 0x4a778acfad1abc155a009dc976d2cf0db6197d3d360194d74b1fb92b96986b00
const ASSET_2: b256 = 0x0d000e76a67758bbc6861d48ca571876cd480d9df8cf4dfa635c168e1e97f324

fn main() {
    good1();
}
